--- a/scripts/configs/yolov4/model-base.yaml
+++ b/scripts/configs/yolov4/model-base.yaml
@@ -1,28 +1,12 @@
-cudnn:
-  benchmark: true
+# TODO
+---
 
-workers: 4
-dataset:
-  dataset: cityscapes
-  root: data/cityscapes
-  num_classes: 19
-model:
-  backbone: resnet101
-train:
-  batch_size: 8
-  shuffle: true
-  crop_size: 769
-  start_epoch: 0
-  end_epoch: 12 #200
-  optimizer: sgd
-  base_lr: 0.007
-  last_mult: 1.0
-  momentum: 0.9
-  weight_decay: 0.0001
-  ignore_label: 255
-  resume: False
-test:
-  batch_size: 1
-  shuffle: false
-  model_path: 'trained-models/model_best_miou_26-56.pt'
-  save_images: True
+detector: "yolov4"
+
+backbone:
+  name: "resnet50"
+  pretrained: True
+  remove_top: True
+
+neck:
+head:
