--- a/scripts/configs/yolov4/model-base.yaml
+++ b/scripts/configs/yolov4/model-base.yaml
@@ -14,7 +14,7 @@ head:
 
 # Piror information to help the object detection model
 priors:
-  # List of anchor points (w,h); alternates between x,y coordinates -> num_anchors is len(anchors)/2; anchors are ONLY for w,h;
+  # List of anchor points (w,h); alternates between w,h -> num_anchors is len(anchors)/2; anchors are ONLY for w,h;
   # In Yolo if there are n bbox predictions per cell, there should be n*3 anchor boxes
   anchors: [12, 16, 19, 36, 40, 28, 36, 75, 76, 55, 72, 
             146, 142, 110, 192, 243, 459, 401,]
