--- a/scripts/configs/laptop-wsl-config.yaml
+++ b/scripts/configs/laptop-wsl-config.yaml
@@ -1,6 +1,10 @@
 # Base config file which stores the default parameters which apply to all model configurations
 ---
 
+# Mode to use for debugging/development; this only uses a few samples in in the train/val dataset
+# to quickly run the code
+debug_mode: True
+
 # Root directory of your project; type "pwd" in the command line to find it
 root_dir: "C:/Users/bsele/Documents/Programming/machine-learning/detectors"
 
