--- a/scripts/configs/laptop-wsl-config.yaml
+++ b/scripts/configs/laptop-wsl-config.yaml
@@ -10,7 +10,11 @@ root_dir: "C:/Users/bsele/Documents/Programming/machine-learning/detectors"
 
 input_data: "data/input.txt"
 
+# Base directory for output files; do not change this 
 output_path: "output"
+
+# Experiment name; this will be used for the output directory; use "development" when developing
+exp_name: "developing"
 
 # Name of dataset; must be one of the names in the dataset_map dict
 dataset_name: "CocoDetectionMiniTrain"
