--- a/scripts/configs/base-wsl-config.yaml
+++ b/scripts/configs/base-wsl-config.yaml
@@ -1,12 +1,20 @@
 # Base config file which stores the default parameters which apply to all model configurations
 ---
 
+# Mode to use for debugging/development; this only uses a few samples in in the train/val dataset
+# to quickly run the code
+debug_mode: True
+
 # Root directory of your project; type "pwd" in the command line to find it
 root_dir: "C:/Users/bsele/Documents/Programming/machine-learning/detectors"
 
 input_data: "data/input.txt"
 
+# Base directory for output files; do not change this 
 output_path: "output"
+
+# Experiment name; this will be used for the output directory; use "development" when developing
+exp_name: "development"
 
 # Name of dataset; must be one of the names in the dataset_map dict
 dataset_name: "CocoDetectionMiniTrain"
