--- a/scripts/configs/laptop-wsl-config.yaml
+++ b/scripts/configs/laptop-wsl-config.yaml
@@ -56,8 +56,8 @@ cuda:
 # Logging parameters
 logging:
 
-  # Estimate loss every eval_iters iterations
-  eval_interval: 100
+  # Log the train progress every n steps
+  train_steps_freq: 100
 
 # Reproducibility information
 reproducibility:
