--- a/scripts/configs/laptop-wsl-config.yaml
+++ b/scripts/configs/laptop-wsl-config.yaml
@@ -6,7 +6,7 @@
 debug_mode: True
 
 # Root directory of your project; type "pwd" in the command line to find it
-root_dir: "C:/Users/bsele/Documents/Programming/machine-learning/detectors"
+root_dir: "/home/bselee/programming/detectors"
 
 input_data: "data/input.txt"
 
