--- a/scripts/configs/base-wsl-config.yaml
+++ b/scripts/configs/base-wsl-config.yaml
@@ -3,7 +3,7 @@
 
 # Mode to use for debugging/development; this only uses a few samples in in the train/val dataset
 # to quickly run the code
-debug_mode: False
+debug_mode: True
 
 # Root directory of your project; type "pwd" in the command line to find it
 root_dir: "/home/bselee/programming/detectors"
@@ -26,10 +26,11 @@ dataset:
   root: "/mnt/c/Users/bsele/Documents/Datasets/coco_minitrain_25k"
 
 train:
-  optimizer: "adamw"
+
+  optimizer: "adam"
   scheduler: "step_lr"
 
-  batch_size: 16
+  batch_size: 4
   learning_rate: 0.001 #1e-3
   weight_decay: 0.0001
   lr_drop: 200
@@ -45,7 +46,7 @@ train:
     ckpt_every: 10
 
 validation:
-  batch_size: 16
+  batch_size: 2
 
 # GPU parameters
 cuda:
