--- a/scripts/configs/laptop-wsl-config.yaml
+++ b/scripts/configs/laptop-wsl-config.yaml
@@ -42,7 +42,7 @@ train:
     epochs: 200
 
     # Number of epochs to checkpoint after; use 'null' to turn off checkpointing
-    ckpt_every: 10
+    ckpt_epochs: 10
 
 validation:
   batch_size: 2
