--- a/scripts/configs/test-pc-config.yaml
+++ b/scripts/configs/test-pc-config.yaml
@@ -9,7 +9,7 @@ debug_mode: False
 root_dir: "/home/bselee/programming/detectors"
 
 # Path to the trained models state dict;
-state_dict_path: ""
+state_dict_path: "/home/bselee/programming/detectors/output/development/2024_08_30-06_53_49_PM/checkpoint0040.pt"
 
 # Base directory for output files; do not change this 
 output_path: "output/test"
