--- a/scripts/configs/train-pc-config.yaml
+++ b/scripts/configs/train-pc-config.yaml
@@ -1,9 +1,9 @@
 # Base config file which stores the default parameters which apply to all model configurations
 ---
 
-# Mode to use for debugging/development; this only uses a few samples in in the train/val dataset
-# to quickly run the code
-debug_mode: False
+# Whether to run in development/debugging mode; this only uses a few samples in in the train/val dataset
+# to quickly run the code as well as sets num_workers=0
+dev_mode: True
 
 # Root directory of your project; type "pwd" in the command line to find it
 root_dir: "/home/bselee/programming/detectors"
