Writing test script

--- a/scripts/configs/yolov4/model-base.yaml
+++ b/scripts/configs/yolov4/model-base.yaml
@@ -6,6 +6,8 @@ detector: "yolov4"
 backbone:
   name: "resnet18"
   pretrained: True
+
+  # Removes the last few MLP since we aren't doing classification
   remove_top: True
 
 neck:
