--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,9 @@ description = "A modular framework for object detectors, mostly for my own under
 authors = ["Bradley Selee"]
 license = "LICENSE.txt"
 
+[tool.isort]
+profile = "black" # prevents isort from reformatting black
+
 # This field lists other packages that your project depends on to run.
 # Any package you put here will be installed by pip when your project is
 # installed, so they must be valid existing projects.
